@@ -1,3 +1,9 @@
+Wed Sep  4 09:06:09 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* Makefile (VPATH): Look in $(asm_syntax) instead of old
+	$(machine); Hurd configure now folds equivalent CPU types into
+	asm_syntax. 
+
 Thu Aug 29 12:50:37 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* i386/csw.S: Include <mach/i386/asm.h> instead of <i386/asm.h>.
